fixed title alignment

--- a/src/components/home/styles/_home.scss
+++ b/src/components/home/styles/_home.scss
@@ -25,7 +25,7 @@
   width: 100%;
   height: 100%;
   min-height: auto;
-  grid-template-rows: 1em auto min-content min-content auto 50px; //repeat(2, min-content)
+  grid-template-rows: 1em 1fr min-content min-content 1fr 50px; //repeat(2, min-content)
   grid-template-columns: 50% auto;
   padding-bottom: 0px;
   box-sizing: border-box;
@@ -57,7 +57,6 @@
 
 .placementExtra {
   position: relative;
-  margin: 116px 0px 70px 40px;
   grid-area: 5 / 2 / 5 / 2;
   justify-self: start;
 }
